fetched chapter, updated DB and fixed bugs

--- a/OmneFictio.Web/Views/Home/Chapter.cshtml
+++ b/OmneFictio.Web/Views/Home/Chapter.cshtml
@@ -2,10 +2,10 @@
 @{
     ViewData["Title"] = "Chapter";
     @section Stylesheets {
-        
+        <link rel="stylesheet" href="~/css/chapter.css" asp-append-version="true" />
     }
     @section Scripts {
-        
+        <script src="~/js/chapter.js" asp-append-version="true" ></script>
     }
 }
 @{
