--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -77,7 +77,7 @@
                         
                     </span>
                 </div>
-                <span class="pd-heading">
+                <span class="pd-heading pd-series-heading">
                     Based on
                 </span>
                 <div class="pd-series">
