--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -175,9 +175,17 @@
     </template>
 
 
+    <div class="modal-replies" id="modal-replies">
+        <div class="mr-header">
+            <span>Replies</span>
+            <div class="mr-close" id="mr-close">
+                <i class="bi bi-x-lg"></i>
+            </div>
+        </div>
+        <div class="mr-body">
 
-
-
+        </div>
+    </div>
 
 
     <form class="login-modal" id="login-modal">
