--- a/OmneFictio.Web/wwwroot/css/chapter.css
+++ b/OmneFictio.Web/wwwroot/css/chapter.css
@@ -1,12 +1,12 @@
-.chapter-container {
+main {
   width: 100%;
-  padding: 14px;
+  padding: 10px;
   border-radius: 16px;
   color: var(--text-color1);
   background-color: var(--background-color1);
 }
 
-.c-header {
+.ch-header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -14,108 +14,162 @@
   font-family: "Josefin Sans", sans-serif;
   margin: 10px 0 22px;
 }
-.c-header .c-options {
+.ch-header .ch-options {
   display: flex;
   justify-content: space-between;
 }
-.c-header .c-options a, .c-header .c-options span {
+.ch-header .ch-options a, .ch-header .ch-options span {
   font-size: 1.2rem;
   text-decoration: underline;
   cursor: pointer;
 }
-.c-header .c-navigation {
+.ch-header .ch-navigation {
   display: flex;
   justify-content: space-between;
   font-family: "Itim", cursive;
 }
-.c-header .c-navigation select {
+.ch-header .ch-navigation select {
   color: var(--text-color1);
   background: var(--background-color2);
-  padding: 4px;
+  padding: 4px 8px;
   border-radius: 5px;
   font-size: 1.1rem;
   cursor: pointer;
+  transition: background-color 0.1s;
 }
-.c-header .c-navigation .c-navigationicons {
+.ch-header .ch-navigation select:hover {
+  background-color: var(--background-color-hover2);
+}
+.ch-header .ch-navigation .ch-navigationicons {
   display: flex;
   gap: 10px;
 }
-.c-header .c-navigation .c-navigationicons a {
+.ch-header .ch-navigation .ch-navigationicons a {
   font-size: 1.2rem;
-  padding: 2px 6px;
   border-radius: 5px;
-  background: var(--background-color2);
+  background-color: var(--background-color2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 34px;
+  transition: background-color 0.1s;
+}
+.ch-header .ch-navigation .ch-navigationicons a i {
+  display: flex;
+}
+.ch-header .ch-navigation .ch-navigationicons a:hover {
+  background-color: var(--background-color-hover2);
+}
+.ch-header .ch-navigation .ch-navigationicons .ch-prevlink {
+  padding-right: 2px;
+}
+.ch-header .ch-navigation .ch-navigationicons .ch-nextlink {
+  padding-left: 2px;
 }
 
-.c-author_note {
+.ch-author_note {
   display: flex;
   flex-direction: column;
   margin-bottom: 26px;
 }
-.c-author_note .note_caption {
+.ch-author_note .note_caption {
   font-family: "Josefin Sans", sans-serif;
   font-size: 1.2rem;
 }
-.c-author_note .authornote_body {
+.ch-author_note .authornote_body {
   font-family: sans-serif;
   padding: 0 10px;
 }
 
-.c-caption {
+.ch-caption {
   display: flex;
   flex-direction: column;
   gap: 6px;
   margin-bottom: 16px;
   text-align: center;
 }
-.c-caption h3 {
+.ch-caption h3 {
   font-family: "Josefin Sans", sans-serif;
 }
-.c-caption h5 {
+.ch-caption h5 {
   font-family: "Itim", cursive;
 }
 
-.c-end {
+.ch-end {
   text-align: center;
   margin-bottom: 20px;
 }
-.c-end span {
+.ch-end span {
   font-family: "Itim", cursive;
 }
 
-.c-evaluation {
+.ch-footer {
+  font-family: "Itim", cursive;
+  display: flex;
+  flex-flow: wrap;
+  padding: 0 10px 10px;
+  margin-bottom: 20px;
+  justify-content: center;
+  gap: 10px;
+}
+.ch-footer .ch-evaluation {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   color: var(--text-color2);
-  margin-bottom: 20px;
 }
-.c-evaluation i {
-  font-size: 1.4rem;
+.ch-footer .ch-evaluation i {
+  font-size: 1.2rem;
   cursor: pointer;
   transition: color 0.2s ease;
 }
-.c-evaluation .c-likes {
-  font-size: 1.2rem;
+.ch-footer .ch-evaluation .ch-likes {
   padding: 0 8px;
 }
+.ch-footer .ch-user {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-shrink: 0;
+}
+.ch-footer .ch-user .ch-username {
+  font-size: 0.8rem;
+  cursor: pointer;
+  margin-left: 8px;
+  padding-right: 8px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 180px;
+}
+.ch-footer .ch-user .ch-username:hover {
+  text-decoration: underline;
+}
+.ch-footer .ch-user img {
+  height: 1.7rem;
+  width: 1.7rem;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
-.c-body {
+.ch-body {
   margin-bottom: 16px;
 }
-.c-body p {
+.ch-body p {
   margin-bottom: 12px;
 }
 
 @media (min-width: 768px) {
-  .chapter-container {
+  main {
+    padding: 14px 20px;
     margin-top: 14px;
   }
-  .c-header {
+  .ch-header {
     flex-direction: row;
   }
-  .c-header > * {
+  .ch-header > * {
     gap: 40px;
   }
 }/*# sourceMappingURL=chapter.css.map */
