--- a/OmneFictio.Web/Views/Home/Chapter.cshtml
+++ b/OmneFictio.Web/Views/Home/Chapter.cshtml
@@ -17,95 +17,84 @@
     username = User.Claims.FirstOrDefault(claim => claim.Type == "unique_name")?.Value ?? "";
     userPicture = User.Claims.FirstOrDefault(claim => claim.Type == "actort")?.Value ?? "none";
 }
-
-
-<div class="chapter-container">
-
-
-    <div class="c-header">
-        <div class="c-options">
+<template id="chapter_instance">
+    <div class="ch-header">
+        <div class="ch-options">
             <a href="">Return to Post</a>
             <span>Customize</span>
         </div>
-        <div class="c-navigation">
-            <select id="">
-                <option>Prologue</option>
-                <option>Chapter 1</option>
-                <option>Chapter 2</option>
-                <option>Chapter 3</option>
-                <option>Chapter 4</option>
-                <option>Chapter 5</option>
-                <option>Epilogue</option>
+        <div class="ch-navigation">
+            <select id="ch-selectch">
             </select>
-            <div class="c-navigationicons">
-                <a href="" class="c-prevlink"><i class="bi bi-chevron-left"></i></a>
-                <a href="" class="c-nextlink"><i class="bi bi-chevron-right"></i></a>
+            <div class="ch-navigationicons">
+                <a href="" class="ch-prevlink"><i class="bi bi-chevron-left"></i></a>
+                <a href="" class="ch-nextlink"><i class="bi bi-chevron-right"></i></a>
             </div>
         </div>
     </div>
 
-    <div class="c-author_note cnote_1">
+    <div class="ch-author_note cnote_1">
         <span class="note_caption">Writer note</span>
         <div class="authornote_body">
-            <p>I hope you enjoy this one.</p>
+            
         </div>
     </div>
 
-    <div class="c-caption">
-        <h3>Odin the Omnipotent</h3>
-        <h5>Chapter 3</h5>
+    <div class="ch-caption">
+        <h3></h3>
+        <h5></h5>
     </div>
 
-    <div class="c-body">
-        <p>Odin did not even begin to imagine the possibility that he would be forced on their terms. After his
-            departure they immediately sent in the final of the reinforcements and began the mission. One of the other
-            recruits was dispatched by his uncle, a priest. He had to be taken to Dharod and his group were later sent
-            in on the mission himself. Dharod had no shortage of problems.</p>
-        <p>A few days of searching at night, a few men,
-            a few villagers, and a few men of his group had to go into the wilderness, and on their way, in the evening,
-            to try and save a young man from drowning which he had left for another man, when he was shot dead, by a
-            sniper as he had been shot for crossing a bridge in the village without a permit, and the other man was
-            taken to hospital. The boy did not survive. He tried to run from the crowd, to find a place to hide, but his
-            legs ran and he fell flat on his haunches. When he found his way to the hospital, his father took him up to
-            the top of a mountain. At his insistence, Tawas and Al-Sarabi drove him to a cabin. In his room, in the bed,
-            were the contents of a pistol and a gun. The soldiers killed his uncle. There was no way for him to escape
-            but with his father's help, and his mother's mercy, he left the area.</p>
+    <div class="ch-body">
+        
     </div>
 
-    <div class="c-end">
+    <div class="ch-end">
         <span>~ End of the Chapter ~</span>
     </div>
 
-    <div class="c-author_note cnote_2">
+    <div class="ch-author_note cnote_2">
         <span class="note_caption">Writer note</span>
         <div class="authornote_body">
-            <p>Please don't forget to feedback.</p>
+            
         </div>
     </div>
 
-    <div class="c-evaluation">
-        <i class="bi bi-hand-thumbs-up" data-action="like" data-target_type="chapter"></i>
-        <span class="c-likes vote_count">4895</span>
-        <i class="bi bi-hand-thumbs-down" data-action="dislike" data-target_type="chapter"></i>
+    <div class="ch-footer">
+        <div class="ch-evaluation">
+            <i class='bi bi-hand-thumbs-up' data-action='like' data-target_type='chapter'></i>
+            <span class="ch-likes vote_count">4895</span>
+            <i class='bi bi-hand-thumbs-down' data-action='dislike' data-target_type='chapter'></i>
+        </div>
+        <div class="ch-user">
+            <span class="ch-username">
+                MrBombastic
+            </span>
+            <!--<span class="p-username p-deleted_user">DeletedUser</span>-->
+            <img src="" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
+        </div>
     </div>
+</template>
 
-    @if (userId != "-1")
-    { ///images/users/
-        <div class="add_comment-cont">
-            <textarea placeholder="This is where we comment." id="commentBody"></textarea>
-            <div class="ac-footer">
-                <div class="ac-user">
-                    <img src="/images/users/@userPicture"
-                    onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
-                    <span class="ac-username">@username</span>
-                </div>
-                <a href="#" class="comment-btn" id="addCommentToChapter">Send</a>
+<div class="chapter-container">
+
+</div>
+
+@if (userId != "-1")
+{ ///images/users/
+    <div class="add_comment-cont">
+        <textarea placeholder="This is where we comment." id="commentBody"></textarea>
+        <div class="ac-footer">
+            <div class="ac-user">
+                <img src="/images/users/@userPicture"
+                onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
+                <span class="ac-username">@username</span>
             </div>
+            <a href="#" class="comment-btn" id="addCommentToChapter">Send</a>
         </div>
-    }
-
-    <div class="comments" id="comment-section">
-
     </div>
+}
+
+<div class="comments" id="comment-section">
 
 </div>
