usercard when username onhover - 1

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -54,10 +54,29 @@
                         
                     </span>
                 </div>
-                <div class="p-user">
+                <div class="p-user belongs_to">
                     <span class="p-username">
                         
                     </span>
+                    <div class="usercard-onhover ucard-mode1">
+                        <span class="ucard-username">MrBombastic</span>
+                        <img src='/images/onerror/user_no_photo_300x300.png'>
+                        <p>Hello, this is my default description. I give information here.</p>
+                        <div class="ucard-stats">
+                            <div class="ucard-likes">
+                                <i class="bi bi-hand-thumbs-up"></i>
+                                <span>90K</span>
+                            </div>
+                            <div class="ucard-follows">
+                                <i class="bi bi-heart"></i>
+                                <span>600</span>
+                            </div>
+                            <div class="ucard-published">
+                                <i class="bi bi-card-text"></i>
+                                <span>14</span>
+                            </div>
+                        </div>
+                    </div>
                     <!--<span class="p-username p-deleted_user">DeletedUser</span>-->
                     <img src="" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
                 </div>
