--- a/OmneFictio.Web/Views/Home/Chapter.cshtml
+++ b/OmneFictio.Web/Views/Home/Chapter.cshtml
@@ -63,12 +63,12 @@
     <div class="ch-footer">
         <div class="ch-evaluation">
             <i class='bi bi-hand-thumbs-up' data-action='like' data-target_type='chapter'></i>
-            <span class="ch-likes vote_count">4895</span>
+            <span class="ch-likes vote_count"></span>
             <i class='bi bi-hand-thumbs-down' data-action='dislike' data-target_type='chapter'></i>
         </div>
         <div class="ch-user">
             <span class="ch-username">
-                MrBombastic
+                
             </span>
             <!--<span class="p-username p-deleted_user">DeletedUser</span>-->
             <img src="" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
