--- a/OmneFictio.Web/wwwroot/css/postitem.scss
+++ b/OmneFictio.Web/wwwroot/css/postitem.scss
@@ -122,7 +122,7 @@
                     text-decoration: underline;
                 }
             }
-            img{
+            > img{
                 height: 1.7rem;
                 width: 1.7rem;
                 border-radius: 50%;
