new masonry system with JS (will be improved)

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -382,8 +382,13 @@
             Filter
         </span>
     </div>
-    <div class="post-list pl-masonry-2" id="postListSection">
-    
+    <div class="post-list pl-masonry" id="postListSection">
+        <div id="pl-column1">
+            
+        </div>
+        <div id="pl-column2">
+
+        </div>
     </div>
     
 </div>
