--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -67,21 +67,9 @@ main{
     .post-list{
         width: 100%;
         display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
         flex-direction: column;
-    }
-    .pl-masonry{
-        &::before, &::after {
-            content: "";
-            flex-basis: 100%;
-            width: 0px;
-            order: 2;
-        }
-        .post:nth-child(2n+1) {
-            order: 1;
-        }
-        .post:nth-child(2n) {
-            order: 2;
-        }
     }
 }
 
@@ -579,26 +567,11 @@ main{
     .nav-cont{
         width: 240px;
     }
-
-    //activate masonry designs after 992px
     .pl-masonry{
-        flex-flow: column wrap;
-        .post{
-            width: 49.5% !important;
-            > * {
-                height: 100%;
-                justify-content: space-between;
-            }
-        }
-        .post:nth-child(2n+1) {
-            margin-right: 1%;
-        }
-    }
-    .pl-masonry-2{
-        display: block !important;
-        column-count: 2;
-        .post{
-            break-inside: avoid;
+        flex-direction: row !important;
+        gap: 1%;
+        > div {
+            width: 49.5%;
         }
     }
 }
