user card second mode

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -58,22 +58,25 @@
                     <span class="p-username">
                         
                     </span>
-                    <div class="usercard-onhover ucard-mode1">
+                    <div class="usercard-onhover ucard-mode2">
                         <span class="ucard-username">MrBombastic</span>
                         <img src='/images/onerror/user_no_photo_300x300.png'>
-                        <p>Hello, this is my default description. I give information here.</p>
-                        <div class="ucard-stats">
-                            <div class="ucard-likes">
-                                <i class="bi bi-hand-thumbs-up"></i>
-                                <span>90K</span>
-                            </div>
-                            <div class="ucard-follows">
-                                <i class="bi bi-heart"></i>
-                                <span>600</span>
-                            </div>
-                            <div class="ucard-published">
-                                <i class="bi bi-card-text"></i>
-                                <span>14</span>
+                        <div class="ucard-part2">
+                            <span class="ucard-username-mode2">MrBombastic</span>
+                            <p class="ucard-description">Hello, this is my default description. I give information here.</p>
+                            <div class="ucard-stats">
+                                <div class="ucard-likes">
+                                    <i class="bi bi-hand-thumbs-up"></i>
+                                    <span>90K</span>
+                                </div>
+                                <div class="ucard-follows">
+                                    <i class="bi bi-heart"></i>
+                                    <span>600</span>
+                                </div>
+                                <div class="ucard-published">
+                                    <i class="bi bi-card-text"></i>
+                                    <span>14</span>
+                                </div>
                             </div>
                         </div>
                     </div>
