--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -771,7 +771,7 @@ header {
 }
 
 
-/*-----User card on hover-----*/
+/*-----User card on hover / two modes-----*/
 .belongs_to {
     position: relative;
 
@@ -787,64 +787,86 @@ header {
         position: absolute;
         bottom: 30px;
         right: 0;
-        display: flex;
         background: #303030;
         border-radius: 8px;
         -webkit-box-shadow: 0 0 19px -5px rgba(0, 0, 0, 0.5);
         -moz-box-shadow: 0 0 19px -5px rgba(0, 0, 0, 0.5);
         box-shadow: 0 0 19px -5px rgba(0, 0, 0, 0.5);
+        display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         color: var(--text-color1);
 
-        .ucard-username {
+        .ucard-username, .ucard-username-mode2 {
             font-family: 'Josefin Sans', sans-serif;
             font-size: 1.1rem;
             text-align: center;
             padding: 6px 20px;
         }
+        .ucard-username-mode2{
+            display: none;
+        }
 
         >img {
             width: 60px;
             height: auto;
-            margin-bottom: 6px;
             border-radius: 4px;
+            margin-bottom: 6px;
         }
-
-        >p {
-            font-size: 0.6rem;
-            font-family: 'Itim', cursive;
-            padding: 0 6px;
-        }
-
-        .ucard-stats {
+        .ucard-part2{
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: space-around;
-            width: 100%;
-            font-size: .9rem;
-            padding: 6px 10px;
-            gap: 10px;
-
-            >div {
+            justify-content: center;
+            .ucard-description {
+                font-size: 0.6rem;
+                font-family: 'Itim', cursive;
+                padding: 0 6px;
+            }
+    
+            .ucard-stats {
                 display: flex;
                 align-items: center;
-                gap: 6px;
-            }
-
-            i {
-                display: flex;
-            }
-
-            span {
-                font-family: 'Josefin Sans', sans-serif;
-                padding-top: 2px;
+                justify-content: space-around;
+                width: 100%;
+                font-size: .9rem;
+                padding: 6px 10px;
+                gap: 10px;
+    
+                >div {
+                    display: flex;
+                    align-items: center;
+                    gap: 6px;
+                }
+    
+                i {
+                    display: flex;
+                }
+    
+                span {
+                    font-family: 'Josefin Sans', sans-serif;
+                    padding-top: 2px;
+                }
             }
         }
     }
 
-    .ucard-mode1 {}
+    .ucard-mode2 {
+        flex-direction: row !important;
+        padding: 0 10px;
+        .ucard-username{
+            display: none;
+        }
+        .ucard-username-mode2{
+            display: block;
+            padding: 6px 0 2px;
+        }
+        >img {
+            margin-right: 6px;
+            margin-bottom: unset;
+        }
+    }
 }
 
 
