added comment and vote system to chapter

--- a/OmneFictio.Web/Views/Home/Chapter.cshtml
+++ b/OmneFictio.Web/Views/Home/Chapter.cshtml
@@ -63,7 +63,7 @@
     <div class="ch-footer">
         <div class="ch-evaluation">
             <i class='bi bi-hand-thumbs-up' data-action='like' data-target_type='chapter'></i>
-            <span class="ch-likes vote_count"></span>
+            <span class="ch-likes vote_count">--</span>
             <i class='bi bi-hand-thumbs-down' data-action='dislike' data-target_type='chapter'></i>
         </div>
         <div class="ch-user">
@@ -90,7 +90,7 @@
                 onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
                 <span class="ac-username">@username</span>
             </div>
-            <a href="#" class="comment-btn" id="addCommentToChapter">Send</a>
+            <a class="comment-btn" id="addCommentToChapter">Send</a>
         </div>
     </div>
 }
