--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -160,7 +160,7 @@
                 onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
                 <span class="ac-username">@username</span>
             </div>
-            <a href="#" class="comment-btn" id="addCommentToPost">Send</a>
+            <a class="comment-btn" id="addCommentToPost">Send</a>
         </div>
     </div>
 }
