--- a/OmneFictio.Web/wwwroot/css/chapter.scss
+++ b/OmneFictio.Web/wwwroot/css/chapter.scss
@@ -3,12 +3,13 @@
 
 main{
     width: 100%;
-    padding: 10px;
     border-radius: 16px;
     color: var(--text-color1);
     background-color: var(--background-color1);
 }
-
+.chapter-container{
+    padding: 10px;
+}
 .ch-header{
     display: flex;
     flex-direction: column;
@@ -110,7 +111,7 @@ main{
     font-family: 'Itim', cursive;
     display: flex;
     flex-flow: wrap;
-    padding: 0 10px 10px;
+    padding: 0 10px;
     margin-bottom: 20px;
     justify-content: center;
     gap: 10px;
