--- a/OmneFictio.Web/wwwroot/css/comment_section.css
+++ b/OmneFictio.Web/wwwroot/css/comment_section.css
@@ -57,6 +57,7 @@
   color: var(--text-color1);
   text-decoration: underline;
   margin-left: auto;
+  cursor: pointer;
 }
 .add_comment-cont .ac-footer .comment-btn:hover {
   text-decoration: underline;
